--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "session-11",
+  "name": "simple-calc",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Hamnza",
+  "license": "MIT",
   "dependencies": {
-    "@types/inquirer": "^9.0.7",
     "inquirer": "^9.2.16"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^9.0.7"
   }
 }
